Clean up codec sources and tests
Drop unnecessary throws clauses from encode/decode, replace
Collectors.toList() with Stream.toList(), and tidy javadoc.